--- a/Backend-Assessment-Mintyn/src/main/resources/application.properties
+++ b/Backend-Assessment-Mintyn/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/mint
-spring.datasource.username=postgres
-spring.datasource.password =giannis
+spring.datasource.username=
+spring.datasource.password =
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
