--- a/Backend-Assessment-Mintyn/src/main/resources/application.properties
+++ b/Backend-Assessment-Mintyn/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/mint
-spring.datasource.username=
+spring.datasource.username=git
 spring.datasource.password =
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
